--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -9,6 +9,8 @@
 // Base
 @import "base/normalize";
 @import "base/settings";
+@import "grid-settings";
+
 @import "base/typography";
 @import "base/base";
 
