styling sponsors page

--- a/source/information.html.erb
+++ b/source/information.html.erb
@@ -15,7 +15,7 @@
       </ul>
     </nav>
 
-    <div class="col">
+    <div class="col main">
 
       <h2 id="code-of-conduct">Code of conduct</h2>
 
