--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -2,3 +2,56 @@
 page_classes: "sponsors"
 ---
 
+<div class="wrapper">
+  
+  <h1>Sponsors</h1>
+
+  <h2>Venue Sponsor</h2>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+
+  <h2>Gold</h2>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+  <h2>Silver</h2>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+  <h2>Bronze</h2>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+  <div class="media">
+    <%= link_to image_tag("http://placehold.it/300x150"), "#", :class => "sponsor-logo" %>
+    <p><strong>Company Name</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras posuere auctor eleifend. Donec cursus pharetra purus, quis elementum nibh laoreet a. Etiam quis vehicula ligula. Praesent ornare elit nibh, at varius enim venenatis in. Etiam volutpat malesuada congue. Vivamus nec laoreet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec at tortor libero. In ac mollis tellus. Etiam at turpis aliquet arcu sodales imperdiet. Proin sed pulvinar tortor. Aenean sed nibh in sapien semper feugiat. Nam pretium purus non risus vestibulum, dignissim porta leo dictum. Etiam efficitur, felis mattis varius aliquet, eros risus blandit leo.</p>
+  </div>
+
+
+  <h2>Become a Sponsor</h2>
+  <p>Download our <%= link_to "sponsorship prospectus" , "#" %>.</p>
+
+</div>
