--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -27,6 +27,7 @@
 @import "modules/cta";
 @import "modules/map";
 @import "modules/subnav";
+@import "modules/media";
 
 
 
@@ -41,6 +42,7 @@
 // Pages
 @import "modules/home";
 @import "modules/speakers";
+@import "modules/sponsors";
 
 
 
