--- a/source/sponsors.html.erb
+++ b/source/sponsors.html.erb
@@ -55,3 +55,5 @@ page_classes: "sponsors"
   <p>Download our <%= link_to "sponsorship prospectus" , "#" %>.</p>
 
 </div>
+
+<%= partial "tickets" %>
