massive re-structure and styleing layouts on grid

--- a/source/_tickets.html.erb
+++ b/source/_tickets.html.erb
@@ -5,11 +5,11 @@
 
     <div class="releases">
 
-      <div class="release">
+      <div class="release not-on-sale">
         <h2>First Release</h2>
         <p class="cost">Regular</p>
         <p class="cost">Student</p>
-        <p class="sold-out">Sold Out</p>
+        <p class="sold-out-cost">Sold Out</p>
       </div>
 
       <div class="release">
@@ -25,7 +25,7 @@
         <%= link_to 'Buy Now', '#', :class => "btn" %>
       </div>
 
-      <div class="release">
+      <div class="release not-on-sale">
         <h2>Third Release</h2>
         <p class="cost">
           Regular
@@ -35,7 +35,6 @@
           Student
           <span>&pound;39</span>
         </p>
-        <%= link_to 'Buy Now', '#', :class => "btn" %>
       </div>
       
     </div>
