--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,7 +29,7 @@
     <footer class="site-footer">
       <div class="wrapper">
         <p class="footer-heading">Bath Ruby proudly supports</p>
-        <%= link_to image_tag('save-the-children.png', "width" => "304", :height => "62"), 'http://www.savethechildren.org/' %>
+        <%= link_to image_tag('save-the-children.png', "width" => "304", :height => "62"), 'http://www.savethechildren.org/', :class => "charity-logo" %>
         <p class="charity-info">Registered Charity No. 213890 (England & Wales) and SC039570 (Scotland)</p>
         <%= link_to '@bathruby', 'https://twitter.com/bathruby', :class => "twitter-link" %>
         <p class="copy">Copyright &copy; Bath Ruby 2016 All Rights Reserved</p>
