--- a/source/stylesheets/modules/_cta.scss
+++ b/source/stylesheets/modules/_cta.scss
@@ -1,11 +1,13 @@
 // Application Stylesheets
 // ------------------------------------------------------------
-
 .cta{
   text-align: center;
-  padding: 15px 0;
+  padding: 15px 0 0 0;
+  display: block;
+  clear: both;
   p{
     @include font-size(12);
-    margin-top: 15px;
+    margin: 15px 0 0 0;
+    padding: 0;
   }
 }
