--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -16,7 +16,12 @@
   height: 46px;
   float: left;
   position: relative;
-  z-index: 20
+  z-index: 20;
+  @include respond-min($bp-tablet){
+    background-size: 316px 83px;
+    width: 316px;
+    height: 83px;
+  }
 }
 
 .menu{
@@ -29,7 +34,7 @@
   position: relative;
   z-index: 20;
   top: 20px;
-  @include respond-min($bp-tablet){
+  @include respond-min($bp-desktop){
     display: none;
   }
 }
@@ -39,18 +44,15 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 144px 35px 0 35px;
+  padding: 144px 10% 0 10%;
   background: $main;
   z-index: 10;
   width: 100%;
   height: 100%;
 
-  ul{padding: 0;}
+  ul{@include list-style-none();}
 
   li{
-    @include list-style-none();
-    margin: 0;
-    padding: 0;
     @include font-size(35);
     a{
       display: block;
@@ -62,7 +64,7 @@
     }
   }
 
-  @include respond-min($bp-tablet){
+  @include respond-min($bp-desktop){
     display: block !important;
     position: static;
     padding: 0;
@@ -104,7 +106,7 @@ body.information .main-nav ul li.nav-information a,
 body.sponsors .main-nav ul li.nav-sponsors a,
 body.tickets .main-nav ul li.nav-tickets a {
   color: $contrast;
-  @include respond-min($bp-tablet){
+  @include respond-min($bp-desktop){
     color: $contrast-light;
   }
 }
