--- a/source/stylesheets/modules/_wrapper.scss
+++ b/source/stylesheets/modules/_wrapper.scss
@@ -3,19 +3,5 @@
 
 .wrapper{
   @include clearfix();
-  padding: 0 32px;
-
-  @include respond-min($bp-tablet) {
-    padding: 0 76px;
-  }
-
-  @include respond-min($bp-desktop) {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-
-  @include respond-min(1352px) {
-    padding: 0; 
-  }
-
+  margin: 0 10%;
 }
