--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -29,6 +29,7 @@
 
 // Pages
 @import "pages/home";
+@import "pages/schedule";
 @import "pages/speakers";
 @import "pages/sponsors";
 @import "pages/information";
