--- a/source/stylesheets/modules/_speaker-list.scss
+++ b/source/stylesheets/modules/_speaker-list.scss
@@ -40,10 +40,12 @@
 
   @include respond-min($bp-tablet) {
     margin-bottom: 100px;
+    margin-left: $gutter;
     li{
-      @include span-columns(4);
+      @include span-columns(3.3);
       @include omega(3n);
       position: relative;
+      
       &:nth-child(3n+1){
         top: 100px;
       }
