--- a/source/stylesheets/modules/_media.scss
+++ b/source/stylesheets/modules/_media.scss
@@ -1,21 +1,20 @@
 // Media
 .media{
   @include clearfix();
-  margin-bottom: 40px;
+  @include overline(default);
+  margin-bottom: 20px;
   .sponsor-logo{
-    margin-bottom: 20px;
-    max-width: 260px;
-    margin: 0 auto;
+    margin: 0 auto 20px auto;
+    display: block;
+    max-width: 300px;
   }
 
-
-  @include respond-min($bp-tablet){
+  @include respond-min($bp-desktop){
     .sponsor-logo{
-      float: left;
-      margin: 0 40px 0 0;
+      @include span-columns(4);
     }
     p{
-      overflow: hidden;
+      @include span-columns(6);
     }
 
   }
