First round of design testing from dickie

--- a/source/stylesheets/base/_settings.scss
+++ b/source/stylesheets/base/_settings.scss
@@ -12,7 +12,7 @@ $main:#ed1b24;             // Red
 $contrast: #160c2e;        // Dark Blue
 $contrast-light: #c4c4c4;  // Lightest Grey
 $border: #e8e8e8;          // Light Grey
-$sold-out: #2d196c;        // Light Blue
+$sold-out: #512dc1;        // Light Blue
 
 // Base Font Size
 $basefont: 14;
