--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
             <li class="nav-schedule"><%= link_to 'Schedule', '/schedule' %></li>
             <li class="nav-information"><%= link_to 'Information', '/information' %></li>
             <li class="nav-sponsors"><%= link_to 'Sponsors', '/sponsors' %></li>
-            <li class="nav-tickets"><%= link_to 'Tickets', '/tickets' %></li>
+            <li class="nav-tickets"><%= link_to 'Tickets', '#tickets' %></li>
           </ul>
         </nav>
         <a href="#" class="menu">Menu</a>
