--- a/source/stylesheets/modules/_header.scss
+++ b/source/stylesheets/modules/_header.scss
@@ -75,11 +75,12 @@
     float: right;
     li{
       @include font-size(15);
+      letter-spacing: 1px;
       text-transform: uppercase;
       float: left;
       margin-left: 30px;
       &:first-child{margin-left: 0;}
-      &.nav-home, &.nav-tickets{display: none;}
+      &.nav-home, &.nav-sponsors{display: none;}
       a{
         display: block;
         color: $main;
