fixed menu and tidying up links

--- a/source/stylesheets/pages/_sponsors.scss
+++ b/source/stylesheets/pages/_sponsors.scss
@@ -47,7 +47,9 @@ body.sponsors{
     border-color: $border;
     color: $main;
     &:hover{
-      border-color: $contrast;
+      border-color: $main;
+      background-color: $main;
+      color: $light;
     }
   }
 
