--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -34,6 +34,7 @@
   line-height: 25px;
   display: inline-block;
   height: 25px;
+  @include font-italic();
   @include respond-min($bp-tablet){
     float: left;
     display: block;
